--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lottie-web": "^5.9.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
