--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-lottie": "^1.2.3",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
     "typewriter-effect": "^2.18.2",
     "use-sound": "^4.0.1",
     "web-vitals": "^2.1.4"
