--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^6.3.4",
+    "google-maps": "^4.3.3",
     "lottie-react-web": "^2.2.2",
     "lottie-web": "^5.9.4",
     "react": "^18.1.0",
