--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lottie-react-web": "^2.2.2",
     "lottie-web": "^5.9.4",
     "react": "^18.1.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.1.0",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^5.3.3",
